apps/matrix/dendrite/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dendrite
  labels:
    app: dendrite
spec:
  selector:
    matchLabels:
      app: dendrite
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dendrite
    spec:
      containers:
      - name: dendrite
        image: ghcr.io/matrix-org/dendrite-monolith:v0.13.0
        imagePullPolicy: IfNotPresent
        args:
          - '--config'
          - '/etc/dendrite/dendrite.yaml'
          - '-really-enable-open-registration'
        ports:
          - name: http
            containerPort: 8008
            protocol: TCP
        resources:
          requests:
            cpu: 150m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 2048Mi
        volumeMounts:
        - mountPath: /etc/dendrite/
          name: dendrite-conf-vol
        - mountPath: /etc/dendrite/secrets/
          name: dendrite-signing-key
        - mountPath: /data/media_store
          name: dendrite-media
        - mountPath: /data/jetstream
          name: dendrite-jetstream
        - mountPath: /data/search
          name: dendrite-search
        - mountPath: /bridges
          name: bridges
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 10
          httpGet:
            path: /_dendrite/monitor/health
            port: http
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 10
          httpGet:
            path: /_dendrite/monitor/health
            port: http
        startupProbe:
          initialDelaySeconds: 35
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 10
          httpGet:
            path: /_dendrite/monitor/up
            port: http
      volumes:
      - name: template
        secret:
          secretName: dendrite-vars
      - name: dendrite-conf-vol
        persistentVolumeClaim:
          claimName: "matrix-config"
      - name: dendrite-signing-key
        secret:
          secretName: "dendrite-signing-key"
      - name: dendrite-jetstream
        persistentVolumeClaim:
          claimName: "matrix-jetstream"
      - name: dendrite-media
        persistentVolumeClaim:
          claimName: "matrix-media"
      - name: dendrite-search
        persistentVolumeClaim:
          claimName: "matrix-search"
      - name: temp-dir
        emptyDir: {}
      - name: bridges
        persistentVolumeClaim:
          claimName: bridge-config-storage
