apps/matrix/dendrite/base/svc.yaml
---
# Source: dendrite/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dendrite
  labels:
    app: dendrite
spec:
  selector:
    app: dendrite
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8008
---
apiVersion: v1
kind: Service
metadata:
  name: dendrite-tailscale
  labels:
    app: dendrite
  annotations:
    tailscale.com/hostname: "matrix"
spec:
  selector:
    app: dendrite
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8008
  loadBalancerClass: tailscale
  type: LoadBalancer
